Fix main nav overlap on dark theme mobile
For smaller mobile browsers sizes like 375px wide, on dark theme,
the main nav overlaps the search box.  Raising the z-index of the
search box fixes the issue in the simplest way in the short term.

A better long term fix rather than relying on z-index is to rework
the element sizing and padding, and remove the blanket cascading
background color definition for dark theme.

--- a/share/static/css/elevator-light/nav.css
+++ b/share/static/css/elevator-light/nav.css
@@ -215,7 +215,7 @@ ul.sf-menu li {
     right: calc(194px + 2px + 1em);
     width: auto;
     font-size: 0.9em;
-    z-index: 99;
+    z-index: 1000;
 }
 
 #topactions input[type="search"] {
